--- a/quiz_management/templates/quiz_management/add_question.html
+++ b/quiz_management/templates/quiz_management/add_question.html
@@ -25,7 +25,13 @@
         <input type="submit" value="Add">
         </form>
     {% endif %}
+    {% if messages %}
+        {% for message in messages %}  
+           <h2> {{ message }} </h2>
+        {% endfor %}
+    {% endif %}
     <br>
-    <a href="{% url "quizmanagement" %}"> Quiz Management </a>
+    <a href="{% url "quizmanagement" %}"> Quiz Management </a>  <br> <br>
+    <a href="{% url "draftquizzes" %}">Draft Quizzes</a>
 {% endblock content %}
 
