feat: a middleware added with ability that quiz_attempter can login now and see the quizes

--- a/host_authentication_system/templates/host_auth_system/profile.html
+++ b/host_authentication_system/templates/host_auth_system/profile.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 {% block content %}
     <h3>Welcome {{ user }}</h3> 
-    {% if user.username == "admin" %}
+    {% if user.is_superuser %}
         <a href="{% url "hostmanagement" %}">Host Management</a> <br><br>
     {% else %}
         <a href="{% url "quizmanagement" %}">Quiz Management Homepage</a> <br><br>
