--- a/quiz_management/templates/quiz_management/add_quiz.html
+++ b/quiz_management/templates/quiz_management/add_quiz.html
@@ -13,6 +13,11 @@
         <button type="submit">Add</button>
     </form>
     <br>
+    {% if messages %}
+        {% for message in messages %}
+           <h2>   {{ message }}  </h2>
+        {% endfor %}
+    {% endif %}
     <a href="{% url "quizmanagement" %}">Quiz Management</a> <br> <br>
     <a href="{% url "profile" %}">Profile</a>
 {% endblock content %}
