feat: Quiz marks can be viewed by attempter

--- a/quiz_attempter_management/templates/quiz_attempter_management/attempt_quiz.html
+++ b/quiz_attempter_management/templates/quiz_attempter_management/attempt_quiz.html
@@ -36,5 +36,7 @@
                     <input type="submit" value="Submit Answers">
                 </div>
             </form>
+    {% else %}
+    <a href="{% url "marks" %}"> See Marks </a>
     {% endif %}
 {% endblock content %}
