--- a/quiz_management/templates/quiz_management/draft_quizzes.html
+++ b/quiz_management/templates/quiz_management/draft_quizzes.html
@@ -13,6 +13,8 @@
             <h3>Quiz Title is :{{ quiz.title }}</h3> <a href="{% url "draft"  quiz.id %}"> Edit Draft </a>    || 
             <br> <a href="{% url "addquizattempter" quiz.id %}"> Add Quiz Attempters </a>  ||
             <br> <a href="{% url "announcement" quiz.id %}">Announcement</a>
+            <br> <a href="{% url "viewdiscussions" quiz.id%}">View Discussions</a>
+            {% comment %} <br> <a href="{% url "generatereport" quiz.id%}">Generate Quiz Report</a> {% endcomment %}
             <h4> ============================== </h4>
             {% endif %}
         {% endfor %}
