--- a/quiz_attempter_management/templates/quiz_attempter_management/start_discussion.html
+++ b/quiz_attempter_management/templates/quiz_attempter_management/start_discussion.html
@@ -13,5 +13,6 @@
         {% endfor %}
         <input type="submit" value="start">
     </form>
+    <a href="{% url "discussion" quiz_id %}">Discussion Details</a>
 {% endblock content %}
     
