--- a/quiz_management/templates/quiz_management/draft_quizzes.html
+++ b/quiz_management/templates/quiz_management/draft_quizzes.html
@@ -14,7 +14,7 @@
             <br> <a href="{% url "addquizattempter" quiz.id %}"> Add Quiz Attempters </a>  ||
             <br> <a href="{% url "announcement" quiz.id %}">Announcement</a>
             <br> <a href="{% url "viewdiscussions" quiz.id%}">View Discussions</a>
-            {% comment %} <br> <a href="{% url "generatereport" quiz.id%}">Generate Quiz Report</a> {% endcomment %}
+            <br> <a href="{% url "generatereport" quiz.id%}">Generate Quiz Report</a>
             <h4> ============================== </h4>
             {% endif %}
         {% endfor %}
