--- a/quiz_attempter_management/templates/quiz_attempter_management/discussion.html
+++ b/quiz_attempter_management/templates/quiz_attempter_management/discussion.html
@@ -6,5 +6,6 @@
 
 {% block content %}
     <a href="{% url "startdiscussion" quiz_id %}">Start Discussion</a> <br> <br>
-    <a href="{% url "viewdiscussions" quiz_id %}">View Discussions</a>
+    <a href="{% url "viewdiscussions" quiz_id %}">View Discussions</a> <br> <br>
+    <a href="{% url "showquizzes" %}">Show Quizzes</a>
 {% endblock content %}
