--- a/quiz_attempter_management/templates/quiz_attempter_management/full_discussion.html
+++ b/quiz_attempter_management/templates/quiz_attempter_management/full_discussion.html
@@ -38,4 +38,5 @@
         <input type="submit" value="comment">
     </form>
     <br>
+    <a href="{% url "discussion" quiz_id%}">Discussions</a>
 {% endblock content %}
