refactor: some code refactoring

--- a/host_authentication_system/templates/host_auth_system/profile.html
+++ b/host_authentication_system/templates/host_auth_system/profile.html
@@ -1,4 +1,4 @@
-{% extends "authentication_system.html" %}
+{% extends "base.html" %}
 
 {% block title %}
     <title> Profile </title>
@@ -6,9 +6,11 @@
 {% block content %}
     <h3>Welcome {{ user }}</h3> 
     {% if user.is_superuser %}
-        <a href="{% url "hostmanagement" %}">Host Management</a> <br><br>
+        <a href="{% url "hostmanagement" %}">Admin Management</a> <br><br>
+    {% elif is_quiz_attempter %}
+        <a href="{% url "showquizzes" %}"> Show Quizzes </a> <br> <br>
     {% else %}
-        <a href="{% url "quizmanagement" %}">Quiz Management Homepage</a> <br><br>
+        <a href="{% url "quizmanagement" %}">Quiz Host Management</a> <br><br>
     {% endif %}
     {% comment %} <a href="{% url "quiz_attempter_homepage" %}">Quiz Attempter</a> {% endcomment %}
     <a href="{% url "logout" %}">Logout</a> <br> 
